# Detec-o-de-fraudes-bancarias-

./: .gitignore  INSTRUCOES_APRESENTACAO.txt  LICENSE  docker-compose.yml  run_pipeine.py  run_pipeline.py
fraud_detection_mobile/: App.js  README.md  app.json  package-lock.json  package.json
fraud_detection_mobile/.expo/: settings.json
fraud_detection_mobile/screens/: HomeScreen.js  ResultScreen.js
fraud_detection_mvp/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_servers.py
fraud_detection_mvp/notebooks/: 01_exploration.ipynb
fraud_detection_mvp/src/: app.py  data_loader.py  diagnose.py  evaluate_holdout.py  frontend.py  model.py  optimize.py  preprocessing.py
fraud_detection_mvp/src/providers/: __init__.py  config.py  main.py
fraud_detection_mvp/src/providers/providers/: __init__.py  aws_provider.py  azure_provider.py  base.py  gcp_provider.py  local_provider.py
fraud_detection_mvp/src/providers/utils/: __init__.py  payload_builder.py  ui_components.py
fraud_detection_mvp/tests/: test_api.py
